--- a/src/components/modal.module.scss
+++ b/src/components/modal.module.scss
@@ -1,10 +1,12 @@
 .closed {
-    display: none;
+    //display: none;
+    content-visibility: hidden;
 }
 
 .open {
     background-color: rgba(0, 0, 0, 0.9);
-    display: block;
+    //display: block;
+    content-visibility: unset;
     position: fixed;
     top: 0;
     left: 0;
